--- a/hugo.toml
+++ b/hugo.toml
@@ -63,6 +63,13 @@ hasCJKLanguage = true
   title = "mmy的心晴小酒馆"
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
   description = "mmy的心晴小酒馆"
+  # Home page config
+  [params.home]
+    # Home page profile
+    [params.home.profile]
+      # subtitle shown in home page
+      subtitle = "借我一盏烛火，点亮你的轮廓"
+
   # 页面头部导航栏配置
   [params.header]
     # 桌面端导航栏模式 ["fixed", "normal", "auto"]
